NewFlameHM/force-app/main/default/objects/Item_Group__c/Item_Group__c.object-meta.xml
<CustomObject>
    <label>Item Group</label>
    <nameField>
        <label>Item Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>