NewFlameHM/force-app/main/default/objects/Item_Group__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Menu_Item__c</referenceTo>
    <relationshipLabel>Item Groups</relationshipLabel>
    <relationshipName>Item_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>