NewFlameHM/force-app/main/default/objects/Item_Group__c/fields/Menu_Id__c.field-meta.xml
<CustomField>
    <fullName>Menu_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu Id</label>
    <referenceTo>Menu__c</referenceTo>
    <relationshipLabel>Item Groups</relationshipLabel>
    <relationshipName>Item_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>