NewFlameHM/force-app/main/default/objects/Item_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Menu_Id__c</columns>
    <columns>Item__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>